- Fixed issue placing ships that caused overlaps - Unified code style across the components, removed unnecessary hooks - Added header showing the shot status - hit, miss or sunk - The win message now shows the number of shots used - Removed unnecessary tracked compiled script from the public directory

--- a/resources/js/components/Battleships.css
+++ b/resources/js/components/Battleships.css
@@ -54,3 +54,8 @@ body {
 .cmd input {
   width: 300px;
 }
+
+.header {
+    height: 15px;
+    margin: 15px 0;
+}
